<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:title="@string/Privacy_title" />

        <item
            android:id="@+id/nav_send"
            android:title="@string/desirelist_settings" />

        <item
            android:id="@+id/nav_share"
            android:title="@string/Share_title" />

        <item
            android:id="@+id/nav_gallery"
            android:title="@string/About_title" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/Logout_title" />
    </group>


</menu>
