<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_round"
        android:shortcutDisabledMessage="@string/newday_new_title1"
        android:shortcutId="shortcutId1"
        android:shortcutLongLabel="@string/newday_new_title1"
        android:shortcutShortLabel="@string/newday_new_title1">
        <intent
            android:action="action1"
            android:targetClass="com.cactime.shortcuts.ShortcutsNewFutureActivity"
            android:targetPackage="cactime.com.cactime"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_round"
        android:shortcutDisabledMessage="@string/newday_new_title2"
        android:shortcutId="shortcutId2"
        android:shortcutLongLabel="@string/newday_new_title2"
        android:shortcutShortLabel="@string/newday_new_title2">
        <intent
            android:action="action2"
            android:targetClass="com.cactime.shortcuts.ShortcutsNewPastActivity"
            android:targetPackage="cactime.com.cactime"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_round"
        android:shortcutDisabledMessage="@string/desirelist_title"
        android:shortcutId="shortcutId3"
        android:shortcutLongLabel="@string/desirelist_title"
        android:shortcutShortLabel="@string/desirelist_title">
        <intent
            android:action="action3"
            android:targetClass="com.cactime.shortcuts.ShortcutsDeaireActivity"
            android:targetPackage="cactime.com.cactime"/>
    </shortcut>

</shortcuts>