<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/Login_title"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarbg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/Login_msg"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edit_login_mail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/Login_edit_mail_hint"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edit_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/Login_edit_password_hint"
                    android:textColor="@color/black"

                    android:textSize="16sp" />


                <LinearLayout
                    android:id="@+id/llt_remember_account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/check_remember_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Login_edit_memory_mail"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llt_login_bg"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/llt_new_data_bg"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_height="58dp">

                    <Button
                        android:background="@drawable/put_btn"
                        android:id="@+id/btn_login"
                        android:layout_below="@+id/llt_new_data_bg"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:text="@string/Login_btn"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <Button
                        android:background="@drawable/put_btn"
                        android:id="@+id/btn_nologin"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:layout_below="@+id/llt_new_data_bg"
                        android:layout_height="48dp"
                        android:layout_width="match_parent"
                        android:text="@string/No_login_btn"
                        android:textColor="@color/white"
                        android:textSize="14sp" />


                </LinearLayout>


                <Button
                    android:background="@drawable/put_btn"
                    android:id="@+id/btn_lost_password"
                    android:layout_below="@+id/llt_login_bg"
                    android:layout_height="48dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_width="match_parent"
                    android:text="@string/Login_lost_password"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingLeft="15dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:paddingBottom="12dp"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal" />


                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:layout_height="55dp" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>