<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarbg"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/tv_title"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/edit_mandata_title"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_below="@+id/toolbarbg"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:background="@drawable/newday_bg"
                android:id="@+id/llt_new_data_bg"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:gravity="center"
                        android:id="@+id/tv_name_title"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:text="@string/index_name_title"
                        android:textColor="@color/personal_sub_title"
                        android:textSize="18sp" />

                    <EditText
                        android:background="@color/transparent"
                        android:hint="@string/index_name_title_hint"
                        android:id="@+id/edit_name_title"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:textSize="18sp" />

                </LinearLayout>

                <View
                    android:background="@color/list_background_line"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"></View>

                <LinearLayout
                    android:id="@+id/llt_birthday"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:gravity="center"
                        android:id="@+id/tv_day_title"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:text="@string/index_birthday_title"
                        android:textColor="@color/personal_sub_title"
                        android:textSize="18sp" />

                    <TextView
                        android:background="@color/transparent"
                        android:gravity="left|center"
                        android:hint="@string/index_birthday_hint"
                        android:id="@+id/tv_birthday"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:textSize="18sp" />

                </LinearLayout>

                <View
                    android:background="@color/list_background_line"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"></View>

                <LinearLayout
                    android:id="@+id/llt_sex"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:gravity="center"
                        android:id="@+id/tv_sex_title"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:text="@string/index_sex_title"
                        android:textColor="@color/personal_sub_title"
                        android:textSize="18sp" />

                    <TextView
                        android:background="@color/transparent"
                        android:gravity="left|center"
                        android:hint="@string/index_sex_hint"
                        android:id="@+id/tv_sex"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:textSize="18sp" />

                </LinearLayout>

                <View
                    android:background="@color/list_background_line"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"></View>

                <LinearLayout
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:gravity="left|center"
                        android:id="@+id/tv_push_title"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:text="@string/newday_new_push2"
                        android:textColor="@color/personal_sub_title"
                        android:textSize="18sp" />

                    <Button
                        android:background="@drawable/btn_switch_off"
                        android:id="@+id/btn_push"
                        android:layout_gravity="center"
                        android:layout_height="40dp"
                        android:layout_width="56dp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_put"
                android:layout_below="@+id/llt_new_data_bg"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:text="@string/newday_new_put_btn"
                android:background="@drawable/put_btn"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


    </ScrollView>
</RelativeLayout>